--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <label class="label">
                               <span class="label-text">Phone Number</span>
                             </label>
-                            <input type="text" placeholder="Enter Phone Number" class="input input-bordered" required />
+                            <input id="phone-number" type="text" placeholder="Enter Phone Number" class="input input-bordered" required />
                           </div>
                           <div class="form-control">
                             <label class="label">
@@ -34,7 +34,7 @@
                             </label>
                           </div>
                           <div class="form-control mt-6">
-                            <button class="btn btn-primary">Login</button>
+                            <button id="button-login" class="btn btn-primary">Login</button>
                           </div>
                         </form>
                       </div>
@@ -44,5 +44,6 @@
             </div>
         </div>
     </main>
+    <script src="js/login.js"></script>
 </body>
 </html>
