--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <label class="label">
                               <span class="label-text">Pin</span>
                             </label>
-                            <input type="password" placeholder="Enter Pin" class="input input-bordered" required />
+                            <input id="pin-number" type="password" placeholder="Enter Pin" class="input input-bordered" required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot Pin?</a>
                             </label>
