--- a/home.html
+++ b/home.html
@@ -36,16 +36,16 @@
                         <label class="label">
                           <span class="label-text">Amount</span>
                         </label>
-                        <input type="text" placeholder="Enter Amount" class="input input-bordered" required />
+                        <input id="add-money-input" type="text" placeholder="Enter Amount" class="input input-bordered" required />
                       </div>
                       <div class="form-control">
                         <label class="label">
                           <span class="label-text">Pin</span>
                         </label>
-                        <input type="password" placeholder="Enter Pin" class="input input-bordered" required />
+                        <input id="pin-number-input" type="password" placeholder="Enter Pin" class="input input-bordered" required />
                       </div>
                       <div class="form-control mt-6">
-                        <button class="btn btn-primary">Add Money</button>
+                        <button id="button-add-money" class="btn btn-primary">Add Money</button>
                       </div>
                     </form>
                 </div>
