--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="divider"></div>
                 <!-- Add Money Form Start -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
@@ -50,10 +50,32 @@
                     </form>
                 </div>
                 <!-- Add Money Form End -->
+                <!-- Cash Out Form Start -->
+                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                    <form class="card-body">
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Amount</span>
+                        </label>
+                        <input id="cash-out-input" type="text" placeholder="Enter Amount" class="input input-bordered" required />
+                      </div>
+                      <div class="form-control">
+                        <label class="label">
+                          <span class="label-text">Pin</span>
+                        </label>
+                        <input id="pin-cash-out-input" type="password" placeholder="Enter Pin" class="input input-bordered" required />
+                      </div>
+                      <div class="form-control mt-6">
+                        <button id="button-cash-out" class="btn btn-primary">Cash Out</button>
+                      </div>
+                    </form>
+                </div>
+                <!-- Cash Out Form End -->
               </div>
             </div>
           </div>
     </main>
     <script src="js/home.js"></script>
+    <script src="js/cashOut.js"></script>
 </body>
 </html>
