--- a/home.html
+++ b/home.html
@@ -25,12 +25,12 @@
                 <div class="divider"></div>
                 <!-- User Action Button -->
                 <div>
-                    <button class="btn btn-lg">Add Money</button>
-                    <button class="btn btn-lg">Cash Out</button>
+                    <button id="show-add-money" class="btn btn-lg">Add Money</button>
+                    <button id="show-cash-out" class="btn btn-lg">Cash Out</button>
                 </div>
                 <div class="divider"></div>
                 <!-- Add Money Form Start -->
-                <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="add-money-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
@@ -51,7 +51,7 @@
                 </div>
                 <!-- Add Money Form End -->
                 <!-- Cash Out Form Start -->
-                <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
@@ -77,5 +77,6 @@
     </main>
     <script src="js/home.js"></script>
     <script src="js/cashOut.js"></script>
+    <script src="js/features.js"></script>
 </body>
 </html>
